test/expected/explain_xxi-c.out
explain constexpr int x
        ^
9: error: "constexpr": unsupported keyword in C
